# MobileNet-Image-Classification

./: README.md
MobileNet-Image-Classification/: CMakeLists.txt  Main.qml  aimodel.cpp  aimodel.h  main.cpp  resources.qrc
